add redirect to personal page

--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -5,6 +5,10 @@
     <title>Page</title>
 </head>
 <body>
+    <h2>{{ page_title }}</h2>
+
+    {{ record.content }}
+    <p><img src="{{ record.picture.url }}"></p>
 
 </body>
 </html>
